# simple_django_project

./: manage.py  pyproject.toml
api/: models.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py
content_moderator/: apps.py  config.py  models.py  urls.py
content_moderator/api/: serializers.py
content_moderator/api/services/: AWS_service.py  AwsService.py  ModeratorService.py
content_moderator/api/views/: Authentication.py  ModeratorView.py  Moderator_service.py  __init__.py  simple_views.py
content_moderator/migrations/: 0001_initial.py  0002_rename_image_image_image_file_and_more.py  0003_image_percentage_of_illegality_and_more.py  0004_alter_image_percentage_of_illegality_and_more.py  0005_alter_image_percentage_of_illegality_and_more.py  0006_alter_image_percentage_of_illegality_and_more.py  0007_alter_image_percentage_of_illegality_and_more.py
content_moderator/services/: AwsService.py  ModeratorService.py
docker/: DockerFile  docker-compose.yaml  docker-compose_dev.yaml
simple_django_project/: celery.py  settings.py  urls.py
simple_django_project/settings/: base.py
simple_django_project/settings/underSettings/: celeryConfig.py  customizable_settings.py  standart.py
